--- a/ads/build.gradle
+++ b/ads/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'androidx.lifecycle:lifecycle-process:2.3.1'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
-    implementation project(path: ':billingLibs')
+//    implementation project(path: ':billingLibs')
 
 //    implementation 'com.google.ads.mediation:facebook:6.0.0.0'
 //    implementation 'com.google.ads.mediation:adcolony:4.4.1.0'
-//    implementation 'com.anjlab.android.iab.v3:library:1.1.0'
+    implementation 'com.anjlab.android.iab.v3:library:1.1.0'
 
 
     def lifecycle_version = "2.0.0"
